minor fix (panel collapsed)

--- a/app/styles/assets/dashboard.less
+++ b/app/styles/assets/dashboard.less
@@ -42,7 +42,7 @@
     	border: 0px;
     	padding-top: 2px;
     	text-shadow: 0 1px 0 #fff;
-    	width: 20px;
+    	width: 21px;
     	
     	&:hover {
 	       background-color: #fff;
